# Taller1Estructura

./: README.md
untitled/: CMakeLists.txt  Cliente.cpp  Cliente.h  Cola.cpp  Cola.h  Comentario.cpp  Comentario.h  ListaCliente.cpp  ListaCliente.h  ListaEnlazada.cpp  ListaEnlazada.h  NodoDobleCliente.cpp  NodoDobleCliente.h  NodoListaEnlazada.cpp  NodoListaEnlazada.h  NodoTicket.cpp  NodoTicket.h  StackComentario.cpp  StackComentario.h  Sucursal.cpp  Sucursal.h  Ticket.cpp  Ticket.h  main.cpp  sistema.h  sistemaSucursal.cpp  sistemaSucursal.h
